Fixes CSS misalignment

--- a/_includes/css/customized.css
+++ b/_includes/css/customized.css
@@ -93,6 +93,6 @@ p code {
     padding-left: 2em;
   }
   .hidesmall {
-    display: inline;
+    display: block;
   }
 }
